--- a/assets/transitions/transitions.css
+++ b/assets/transitions/transitions.css
@@ -1,6 +1,6 @@
 .page-enter-active, .page-leave-active {
-    transition: opacity 0.2s ease-in;
+    transition: opacity 0.2s ease;
   }
   .page-enter, .page-leave-to {
-    opacity: 0.5;
+    opacity: 0;
   }
